        - Make module build cons README automatically.
        - Prettify home path by resolving '..' (Andy Grundman)
        - Improved helper templates a bit, new naming scheme for tests...
        - Added support for case sensitivity, MyApp->config->{case_sensitive}
        - Added $c->detach for non returning forwards
        - Added unified error handling, Catalyst::Exception

5.23  2005-06-03 02:30:00
        - added support for non Catalyst::Base components to live in namespace
        - improved concurrency connections in Catalyst::Engine::HTTP::Daemon

5.22  2005-05-26 14:24:00
        - Improved base locating in MP engines
        - Improved error messages in C::E::HTTP::Daemon
        - Hostnames are now resolved on demand unless provided by engine
        - Fixed memory leak in $c->execute (Michael Reece, Matt S Trout)

5.21  2005-05-24 14:56:00
        - fixed a bug in https detection
        - fixed auto chain finally
        - added MYAPP_HOME and CATALYST_HOME environment variables

5.20  2005-05-18 19:52:00
        - improved uploads and parameters
        - added $c->req->protocol and $c->req->secure
        - added $c->req->user and $c->req->uri
        - improved error message when forwarding to unknown module
        - fixed win32 installer
        - added deep recursion detection
        - fixed auto actions
        - fixed inheritance in dispatcher
        - allow whitespaces between brackets and quoted string
          in Path and Regex attributes
        - new helper templates
        - installer now supports install_base and destdir
        - allow multiple Catalyst apps to run on the same mod_perl
          instance (not the same app!)
        - fixed MP2 engines
        - removed apreq dependency from all MP engines
        - added support for MP registry scripts
        - added support for LocationMatch and ScriptAliasMatch in MP engines
        - added SpeedyCGI engine

5.10  2005-04-23 11:16:00